--- a/config.json
+++ b/config.json
@@ -1,6 +1,5 @@
 {
-  "TRAIN_TEST_SPLIT_RANDOM_SEED": 42,
-  "TEST_PERCENTAGE_OF_DATASET": 0.33,
-  "N_LAYERS": 2,
-  "EPOCHS": 3
+  "EXPERIMENTS_FOLDER": "experiments",
+  "DOWNLOADED_DATASET_FOLDER": "downloaded_datasets",
+  "CODEFILE_NAME": "codefile.version"
 }
