--- a/requirements2.txt
+++ b/requirements2.txt
@@ -30,6 +30,8 @@ entrypoints==0.4
 executing==0.8.2
 fasteners==0.16.3
 future==0.18.2
+gitdb==4.0.9
+GitPython==3.1.27
 idna==3.3
 ipykernel==6.8.0
 ipython==8.0.1
@@ -114,6 +116,7 @@ semantic-version==2.6.0
 Send2Trash==1.8.0
 six==1.16.0
 sklearn==0.0
+smmap==5.0.0
 sniffio==1.2.0
 stack-data==0.1.4
 stevedore==3.5.0
